# easy-screenshot

./: .gitignore  README.md  pip_requirements-dev.txt  pip_requirements.txt  pyproject.toml  run.sh
docs/: CHANGELOG.md  CODE_ARCHITECTURE.md  FILE_STRUCTURE.md  INSTALL.md  NEWS.md  RELATED_PROJECTS.md  RELEASE_HISTORY.md  TROUBLESHOOTING.md  USAGE.md
screenshot/: get_window_id.py  screencapture.py
